--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -2,6 +2,26 @@
   <div class="card-header">
     {{pageTitle + ': ' + product.productName}}
   </div>
+
+  <div 
+    class="card-body"
+    *ngIf='product'>
+
+    <div class="row">
+
+      <div class="col-md-8">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="col-md-6">
+              {{ product.productName}}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
   <div class="card-footer">
     <button class="btn btn-outline-secondary"
       (click)='onBack()'
