--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,8 +6,7 @@
     <div class="row">
       <div class="col-md-2">Filter by:</div>
       <div class="col-md-4">
-        <input type="text"
-          [(ngModel)]='listFilter'>
+        <input type="text" [(ngModel)]='listFilter'>
       </div>
     </div>
     <div class="row">
@@ -20,9 +19,8 @@
         <thead>
           <tr>
             <th>
-              <button class="btn btn-primary"
-                (click)='toggleImage()'>
-                {{ showImage ? 'Hide' : 'Show' }}  Image
+              <button class="btn btn-primary" (click)='toggleImage()'>
+                {{ showImage ? 'Hide' : 'Show' }} Image
               </button>
             </th>
             <th>Product</th>
@@ -35,11 +33,8 @@
         <tbody>
           <tr *ngFor="let product of filteredProducts">
             <td>
-              <img *ngIf='showImage'
-                [src]='product.imageUrl'
-                [title]='product.productName'
-                [style.width.px]='imageWidth'
-                [style.margin.px]='imageMargin'>
+              <img *ngIf='showImage' [src]='product.imageUrl' [title]='product.productName'
+                [style.width.px]='imageWidth' [style.margin.px]='imageMargin'>
             </td>
             <td>
               <a [routerLink]="['/products', product.productId]">{{ product.productName }}</a>
@@ -48,10 +43,12 @@
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
             <td>
-              <pm-star 
-                [rating]='product.starRating'
-                (ratingClicked)='onRatingClicked($event)'
-              ></pm-star>
+              <pm-star [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star>
+            </td>
+            <td>
+              <button class="btn btn-outline-secondary" (click)='onEdit()' style='width:80px'>
+                Edit
+              </button>
             </td>
           </tr>
         </tbody>
