Add routing to edition and add component

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -17,40 +17,42 @@
     <div class="table-responsive">
       <table class="table" *ngIf="products && products.length">
         <thead>
-          <tr>
-            <th>
-              <button class="btn btn-primary" (click)='toggleImage()'>
-                {{ showImage ? 'Hide' : 'Show' }} Image
-              </button>
-            </th>
-            <th>Product</th>
-            <th>Code</th>
-            <th>Available</th>
-            <th>Price</th>
-            <th>5 Star Rating</th>
-          </tr>
+        <tr>
+          <th>
+            <button class="btn btn-primary" (click)='toggleImage()'>
+              {{ showImage ? 'Hide' : 'Show' }} Image
+            </button>
+          </th>
+          <th>Product</th>
+          <th>Code</th>
+          <th>Available</th>
+          <th>Price</th>
+          <th>5 Star Rating</th>
+        </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of filteredProducts">
-            <td>
-              <img *ngIf='showImage' [src]='product.imageUrl' [title]='product.productName'
-                [style.width.px]='imageWidth' [style.margin.px]='imageMargin'>
-            </td>
-            <td>
-              <a [routerLink]="['/products', product.productId]">{{ product.productName }}</a>
-            </td>
-            <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td>
-            <td>{{ product.releaseDate }}</td>
-            <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
-            <td>
-              <pm-star [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star>
-            </td>
-            <td>
-              <button class="btn btn-outline-secondary" (click)='onEdit()' style='width:80px'>
-                Edit
-              </button>
-            </td>
-          </tr>
+        <tr *ngFor="let product of filteredProducts">
+          <td>
+            <img *ngIf='showImage' [src]='product.imageUrl' [title]='product.productName'
+                 [style.width.px]='imageWidth' [style.margin.px]='imageMargin'>
+          </td>
+          <td>
+            <a [routerLink]="['/products', product.productId]">{{ product.productName }}</a>
+          </td>
+          <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td>
+          <td>{{ product.releaseDate }}</td>
+          <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
+          <td>
+            <pm-star [rating]='product.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star>
+          </td>
+          <td>
+            <button class="btn btn-outline-primary"
+              style='width:80px'
+              [routerLink]="['/products', product.productId, 'edit']">
+              Edit
+            </button>
+          </td>
+        </tr>
         </tbody>
       </table>
     </div>
