--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <ul class="nav nav-pills">
     <li><a class="nav-link" [routerLink]="['/welcome']">Home</a></li>
     <li><a class="nav-link" [routerLink]="['/products']">Product List</a></li>
+    <li><a class="nav-link" [routerLink]="['/products/0/edit']">Add Products</a></li>
   </ul>
 </nav>
 <div class="container">
