--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -47,9 +47,9 @@
       <i class="fa fa-chevron-left"></i>
       Back
     </button>
-    <button class="btn btn-outline-secondary"
-      (click)='onEdit()'
-      style='width:80px'>
+    <button class="btn btn-outline-primary"
+      style='width:80px'
+      [routerLink]="['/products', product.id, 'edit']">
       Edit
     </button>
   </div>
